feat: Implement Category CRUD with DTOs and establish Product-Category relationship